[package]
name = "mev-share-client"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
alloy-primitives = "1.1.2"
alloy-rpc-types-mev = "1.0.5"
eventsource-client = "0.15.0"
eyre = "0.6.12"
futures-util = "0.3.31"
serde_json = "1.0.138"
thiserror = "2.0.11"
tracing = "0.1.41"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
